Fixed links alignment

--- a/src/css/nav/_nav-button.scss
+++ b/src/css/nav/_nav-button.scss
@@ -1,26 +1,29 @@
 .nav-button {
   --space: 10px;
+align-items: center;
 
   background: none;
   color: #495166;
   cursor: pointer;
-  display: block;
+  display: flex;
+  flex-direction: row;
   font-size: 24px;
   font-weight: 300;
-  margin: 5px 0;
-  padding: var(--space) calc(var(--space) * 2);
-  text-align: left;
-  position: relative;
-  text-decoration: none;
-  z-index: 500;
+  height: 34px;
   line-height: 1;
+  margin: 5px 0;
   outline: none;
+  padding: 0 calc(var(--space) * 2);
+  position: relative;
+  text-align: left;
+  text-decoration: none;
   width: 100%;
+  z-index: 500;
 
   @media (min-width: 710px) {
+    color: #000;
     font-size: 14px;
     font-weight: 400;
-    color: #000;
     // margin: 0 var(--space);
     margin: 0;
     width: auto;
@@ -31,11 +34,11 @@
 .nav-button {
   // Transitioned properties
   opacity: 1;
+  transition-duration: var(--transition-duration);
 
   // Transition settings
   transition-property: opacity;
   transition-timing-function: ease-in-out;
-  transition-duration: var(--transition-duration);
 }
 body.is-dropdown-toggled .nav-button {
   // Transitioned properties
@@ -55,8 +58,8 @@ body.is-dropdown-toggled .nav-button {
   z-index: 500;
 
   img {
-    margin-left: 5px;
     display: flex;
+    margin-left: 5px;
   }
 
   @media (min-width: 710px) {
